--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.5",
+    "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
