--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.5",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-simple-captcha": "^9.3.1",
+    "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
