--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.5",
+    "antd": "^5.27.0",
     "axios": "^1.11.0",
     "font": "^0.0.4",
     "framer-motion": "^12.23.9",
@@ -19,6 +20,7 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-simple-captcha": "^9.3.1",
