--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "google": "^2.1.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
+    "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
