--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.5",
+    "@hookform/resolvers": "^5.2.1",
     "antd": "^5.27.0",
     "axios": "^1.11.0",
     "font": "^0.0.4",
@@ -25,7 +26,8 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-simple-captcha": "^9.3.1",
-    "svg-captcha": "^1.4.0"
+    "svg-captcha": "^1.4.0",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
