--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "font": "^0.0.4",
     "framer-motion": "^12.23.9",
     "google": "^2.1.0",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
